@@ -1,3 +1,8 @@
+2013-01-02 Riccardo Mottola <rm@gnu.org>
+
+	* DBProgress.m
+	Check for a valid maxVal
+	
 2012-12-29 Riccardo Mottola <rm@gnu.org>
 
 	* DBProgress.m
